# pyfinance

./: .gitignore  Makefile  README.org  docker-compose.yml  pyproject.toml
docs/: graphic-design.org  rebalance.org  simulation-design.org
grafana/dashboards/: finance.json
pyfinance/: asset.py  cli.py  config.py  graphics.py  rebalance.py  simulation.py  ticker.py  victoria.py
pyfinance/resources/: assets.csv
tests/: test_config.py  test_graphics.py  test_pyfinance.py  test_rebalance.py  test_simulation.py  test_ticker.py  test_victoria.py
