[tool.poetry]
name = "pyfinance"
version = "0.1.0"
description = "CLI to manage personal finances"
authors = ["Daniel Dorado"]
readme = "README.org"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
yfinance = "^0.2.28"
pandas = "^2.0.3"


[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
