[tool.poetry]
name = "pyfinance"
version = "0.1.0"
description = "CLI to manage personal finances"
authors = ["Daniel Dorado"]
readme = "README.org"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.21.1"
yfinance = "^1.0"
pandas = "^2.3.3"
click = "^8.3.1"
numpy = "^2.4.1"
requests = "^2.32.5"

[tool.poetry.scripts]
pyfinance = "pyfinance.cli:cli"

[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
